Additional code reviews/clean-up
Signed-off-by: Jeff James <jeff@james-online.com>